# semafold

./: CHANGELOG.md  README.md  README.tr.md  pyproject.toml
examples/: turboquant_embedding.py  turboquant_kv_block.py
src/semafold/turboquant/backends/: __init__.py  _mlx.py  _numpy.py  _protocol.py  _registry.py  _torch.py
tests/contract/: test_backend_protocol_contract.py  test_source_tree_quality_guards.py  test_turboquant_estimate_contract.py
tests/integration/: test_backend_numerical_equivalence.py  test_turboquant_estimate_consistency.py  test_turboquant_kv_rate_distortion.py  test_turboquant_mse_rate_distortion.py  test_turboquant_prod_rate_distortion.py
tests/regression/: test_turboquant_kv_memory_stats_golden.py
tests/unit/: test_backend_numpy_math.py
