[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semafold"
version = "0.2.0"
description = "Phase 1 incubating vector-first compression package with measured accounting and explicit evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mindtro GmbH", email = "team@mindtro.com" }]
dependencies = ["numpy>=1.26"]
keywords = ["compression", "vectors", "quantization", "ai", "gpu", "cuda", "mlx", "metal", "kv-cache", "embeddings"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Homepage = "https://github.com/mindtro/semafold"
Repository = "https://github.com/mindtro/semafold"
Changelog = "https://github.com/mindtro/semafold/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build>=1.2", "pyright>=1.1", "pytest>=9"]
torch = ["torch>=2.0"]
mlx = ["mlx>=0.5"]
all = ["torch>=2.0", "mlx>=0.5"]

[tool.hatch.build]
exclude = [".pytest_cache/**", "**/__pycache__/**", "**/*.py[cod]"]

[tool.hatch.build.targets.wheel]
packages = ["src/semafold"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --tb=short"
testpaths = ["tests"]
xfail_strict = true

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests", "examples", "benchmarks"]
ignore = [
    "src/semafold/turboquant/backends/_torch.py",
    "src/semafold/turboquant/backends/_mlx.py",
    "src/semafold/turboquant/backends/_registry.py",
]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

